--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -8,5 +8,6 @@ fr:
               blank: "Vous devez indiquez un nom"
             email:
               blank: "Vous devez indiquez une adresse email"
+              invalid: "Cette adresse email est invalide"
             content:
               too_short: "Le message est trop court"
